# unitrack

./: .flake8  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg
assets/sample/: README.md
docs/: conf.py  requirements.txt
docs/source/: index.rst  usage.rst
notebooks/: costs.ipynb
sources/unitrack/: __init__.py  _memory.py  _stateful.py  _tracker.py  _wrappers.py  constants.py  consts.py  context.py  cost.py  costs.py  debug.py  detections.py  kalman.py  matching.py  memory.py  tracker.py  tracklet.py  tracklets.py
sources/unitrack/assignment/: __init__.py  _assignment.py  _auction.py  _base.py  _greedy.py  _hungarian.py  _jonker.py  _utils.py  auction.py  base_assignment.py  greedy.py  hungarian.py  jonker.py
sources/unitrack/costs/: __init__.py  base_cost.py  category.py  iou.py  reduce.py  wrap.py
sources/unitrack/fields/: __init__.py  base_field.py  project.py  value.py
sources/unitrack/stages/: __init__.py  association.py  base_stage.py  gate.py  lost.py
sources/unitrack/states/: __init__.py  base_state.py  value.py
sources/unitrack/structures/: __init__.py  detections.py
sources/unitrack/utils/: box.py  cosine.py
tests/: fixture_data.py  test_cost.py  test_matching.py  test_motion.py  test_multi.py
tests/unitrack/: conftest.py  test_assignment.py  test_costs.py  test_detections.py  test_fields.py  test_memory.py  test_stages.py  test_stateful.py  test_tracker.py  test_tracking_costs.py  test_tracking_fields.py  test_tracking_stages.py
