[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "unitrack"
description = 'A multi-stage object tracking framework'
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.9"
keywords = []
authors = [
{ name = "Kurt Stolle", email = "k.h.w.stolle@gmail.com" },
]
classifiers = [
"Development Status :: 4 - Beta",
"Programming Language :: Python",
"Programming Language :: Python :: 3.9",
"Programming Language :: Python :: 3.10",
"Programming Language :: Python :: 3.11",
"Programming Language :: Python :: Implementation :: CPython",
"Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "scipy",
    "numpy",
    "lap"
]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.black]
line-length = 80
target-version = ['py39']

[tool.flake8]
max-line-length = 80

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 80
profile = "black"