[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "unitrack"
description = 'A multi-stage object tracking framework'
version = "0.0.3"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["perception", "computer vision", "deep learning", "object detection", "instance segmentation", "semantic segmentation"]
authors = [{ name = "Kurt Stolle", email = "k.h.w.stolle@gmail.com" }]
classifiers = [
"Development Status :: 4 - Beta",
"Programming Language :: Python",
"Programming Language :: Python :: 3.10",
"Programming Language :: Python :: 3.11",
"Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "torch",
    "scipy",
    "numpy",
    "lap"
]

[tool.setuptools.packages.find]
where = ["sources"]
include = ["*"]
exclude = []

[project.optional-dependencies]
tests = ["black >= 22.3.0", "flake8", "pytest >= 7.1.2", "hypothesis >= 6.58.0"]
docs = ["sphinx", "sphinx-rtd-theme"]

[tool.pyright]
reportPrivateImportUsage = false

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 80
target-version = ['py310']

[tool.isort]
multi_line_output = 5
include_trailing_comma = true
force_grid_wrap = 0
line_length = 80
profile = "black"
